<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_app"
    android:paddingTop="40dp"
    android:paddingBottom="40dp"
    tools:context=".MenuPrincipal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/button3"
            android:textColor="#FFF"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:background="@drawable/button_main"
            android:onClick="Foro"
            android:textSize="15dp"
            android:text="@string/boton_foro" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/button4"
            android:textColor="#FFF"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:onClick="Encuentra"
            android:textSize="15dp"
            android:background="@drawable/button_main"
            android:text="@string/boton_encuentra" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/button5"
            android:textColor="#FFF"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:onClick="TusCitas"
            android:textSize="15dp"
            android:background="@drawable/button_main"
            android:text="@string/boton_tuscitas" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/button6"
            android:textColor="#FFF"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:onClick="Descubre"
            android:background="@drawable/button_main"
            android:text="@string/boton_descubre" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/button2"
            android:textColor="#FFF"
            android:layout_width="136dp"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:onClick="PideAyuda"
            android:background="@drawable/button_main"
            android:text="@string/boton_pideayuda" />
    </LinearLayout>
</LinearLayout>